--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-countup": "^6.4.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.5",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/react-currency-format": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
