--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-countup": "^6.4.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.57.1",
     "swiper": "^8.4.5",
     "typescript": "4.9.4"
